<resources>
    <string name="app_name">group5_final</string>
    <string name="txt_welcome">"Welcome To BeatConnect "</string>
    <string name="txt_username">Username:</string>
    <string name="txt_password">Password:</string>
    <string name="txt_signup">Sign up!</string>
    <string name="btn_login">Login</string>
    <string name="etxt_password" />
    <string name="etxt_su_firstName">First Name:</string>
    <string name="txt_su_lastName">Last Name:</string>
    <string name="txt_su_username">Username:</string>
    <string name="txt_su_password">Password:</string>
    <string name="txt_su_password2">Re-enter Password:</string>
    <string name="txt_su_email">Email:</string>
    <string name="enter_your_first_name">enter your first name</string>
    <string name="btn_su_signup">Sign Up!</string>
    <string name="txt_lp_name">N/A</string>
    <string name="btn_lp_edit">Edit</string>
    <string name="btn_lp_seach">Search</string>
    <string name="btn_lp_messages">Messages</string>
    <string name="btn_src_view">View</string>
    <string name="txt_userFullName">N/A</string>
    <string name="btn_search">Search</string>
    <string name="rbtn_sa_users">Music Artists</string>
    <string name="rbtn_sa_bands">Music Groups</string>
    <string name="btn_compose">Compose</string>
    <string name="txt_inbox">Inbox(0)</string>
    <string name="btn_cm_send">Send</string>
    <string name="btn_cm_cancel">Cancel</string>
    <string name="txt_cm_receiver">To:</string>
    <string name="txt_cm_subject">Subject:</string>
    <string name="txt_cm_message">Message:</string>
    <string name="btn_view">View</string>
    <string name="txt_date">00/00/2024</string>
    <string name="txt_mv_date">Date:</string>
    <string name="txt_mv_dateVal">DD/MM/YYYY</string>
    <string name="txt_mv_sender">From:</string>
    <string name="txt_mv_subject">Subject:</string>
    <string name="txt_mv_message">Message:</string>
    <string name="btn_mv_close">Close</string>
    <string name="add">Add</string>
    <string name="to_play_list"> To PlayList Success</string>
    <string name="exits_play_list"> Is Exit PlayList</string>

    <!-- Dropdown Items for Menu -->
    <string-array name="dropdownMenu_items">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>
</resources>
