<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_mv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_mv_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_mv_dateVal"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.033" />

        <TextView
            android:id="@+id/txt_mv_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_mv_subject"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_mv_subjectVal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mv_sender"
            app:layout_constraintVertical_bias="0.03" />

        <TextView
            android:id="@+id/txt_mv_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_mv_sender"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_mv_senderVal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mv_date"
            app:layout_constraintVertical_bias="0.042" />

        <TextView
            android:id="@+id/txt_mv_senderVal"
            android:layout_width="162dp"
            android:layout_height="22dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mv_date"
            app:layout_constraintVertical_bias="0.043" />

        <TextView
            android:id="@+id/txt_mv_dateVal"
            android:layout_width="119dp"
            android:layout_height="22dp"
            android:text="@string/txt_mv_dateVal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/txt_mv_subjectVal"
            android:layout_width="148dp"
            android:layout_height="23dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mv_senderVal"
            app:layout_constraintVertical_bias="0.018" />

        <TextView
            android:id="@+id/txt_mv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_mv_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mv_subject"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/txt_mv_messageVal"
            android:layout_width="184dp"
            android:layout_height="137dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mv_message"
            app:layout_constraintVertical_bias="0.043" />

        <Button
            android:id="@+id/btn_mv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mv_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_mv_messageVal"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>