<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="16dp"
    >

    <TextView
        android:id="@+id/txt_cm_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cm_receiver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/txt_cm_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cm_subject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cm_receiver"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/txt_cm_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cm_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cm_subject"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:id="@+id/etxt_cm_message"
        android:layout_width="270dp"
        android:layout_height="217dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cm_message"
        app:layout_constraintVertical_bias="0.253" />

    <EditText
        android:id="@+id/etxt_cm_receiver"
        android:layout_width="206dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/txt_cm_receiver"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/etxt_cm_subject"
        android:layout_width="183dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txt_cm_subject"
        app:layout_constraintTop_toBottomOf="@+id/etxt_cm_receiver"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/btn_cm_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cm_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxt_cm_message"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/btn_cm_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cm_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toEndOf="@+id/btn_cm_cancel"
        app:layout_constraintTop_toBottomOf="@+id/etxt_cm_message"
        app:layout_constraintVertical_bias="0.07" />
</androidx.constraintlayout.widget.ConstraintLayout>